@@ -26,6 +26,23 @@ Calculation
         def city_location():
             return {row['city']: row['location'] for row in fetch_city_locations()}
 
+    If decorated function has arguments then separate lookuper with its own lookup table is created for each combination of arguments. This can be used to make lookup tables on demand::
+
+        @make_lookuper
+        def function_lookup(f):
+            return {x: f(x) for x in range(100)}
+
+        fast_sin = function_lookup(math.sin)
+        fast_cos = function_lookup(math.cos)
+
+    Or load some resources, memoize them and use as a function::
+
+        @make_lookuper
+        def translate(lang):
+            return make_list_of_pairs(load_translation_file(lang))
+
+        russian_phrases = map(translate('ru'), english_phrases)
+
 
 .. decorator:: cache(timeout)
 
