@@ -2,6 +2,7 @@
 - added compact(), i?reductions()
 - added default argument to @ignore()
 - added tap() debug utility
+- @make_lookuper() now works on functions with arguments
 - fix: join() and merge() now correctly fail when receive [None, ...]
 - better docs
 Backward incompatible changes:
